--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <section>
       <h2>О PHARAOH</h2>
-      <img src="pharaoh.jpg" alt="PHARAOH" class="main-img">
+      <img src="images/pharaoh.jpg" alt="PHARAOH" class="main-img">
       <article>
         <h3>Музыкальный стиль</h3>
         <p>PHARAOH (настоящее имя — Глеб Голубин) — российский рэпер, один из самых заметных исполнителей новой школы. Его стиль сочетает мрачные биты, эмоциональные тексты и узнаваемый образ.</p>
